--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,7 @@
 # note: following this post for setting up CMake
 # https://cliutils.gitlab.io/modern-cmake/chapters/basics/structure.html
 
-cmake_minimum_required (VERSION 2.8)
-
+cmake_minimum_required(VERSION 3.5...4.0)
 project(PA3)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall")
