--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,18 +56,37 @@ jobs:
       - name: Run clang-tidy
         run: clang-tidy PA3.cpp Main.cpp -- -std=c++17
 
-  docker:
+  deploy:
     runs-on: [self-hosted, linux]
-    container: ubuntu:latest
     timeout-minutes: 5
     steps:
-      - name: Install Docker CLI
-        run: |
-          apt update
-          apt install -y docker.io
-
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Install Docker and SSH tools
+        run: |
+          apt update
+          apt install -y docker.io openssh-client
+
+      - name: Set up SSH key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.REMOTE_SSH_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.REMOTE_HOST }} >> ~/.ssh/known_hosts
+
       - name: Build Docker image
         run: docker build -t pa3-project .
+
+      - name: Save and transfer Docker image to remote host
+        run: |
+          docker save pa3-project | gzip > pa3-project.tar.gz
+          scp pa3-project.tar.gz ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }}:/tmp/
+
+      - name: Run container on remote host
+        run: |
+          ssh ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} '
+            gunzip /tmp/pa3-project.tar.gz &&
+            docker load < /tmp/pa3-project.tar &&
+            docker run --rm pa3-project
+          '
