--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,8 +65,8 @@ jobs:
 
       - name: Install Docker and SSH tools
         run: |
-          apt update
-          apt install -y docker.io openssh-client
+          sudo apt update
+          sudo apt install -y docker.io openssh-client
 
       - name: Set up SSH key
         run: |
