--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,26 @@ jobs:
       - name: Install Docker and SSH tools
         run: |
           sudo apt update
-          sudo apt install -y docker.io openssh-client
+          sudo apt install -y \
+            ca-certificates \
+            curl \
+            gnupg \
+            lsb-release \
+            openssh-client
+
+          sudo mkdir -p /etc/apt/keyrings
+          curl -fsSL https://download.docker.com/linux/debian/gpg | \
+            sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+
+          echo \
+            "deb [arch=$(dpkg --print-architecture) \
+            signed-by=/etc/apt/keyrings/docker.gpg] \
+            https://download.docker.com/linux/debian \
+            $(lsb_release -cs) stable" | \
+            sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+
+          sudo apt update
+          sudo apt install -y docker-ce docker-ce-cli containerd docker-buildx-plugin
 
       - name: Set up SSH key
         run: |
