--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: [self-hosted, linux]
+    container: ubuntu:latest
     timeout-minutes: 3
     steps:
       - name: Install build dependencies
@@ -22,6 +23,7 @@ jobs:
 
   test:
     runs-on: [self-hosted, linux]
+    container: ubuntu:latest
     timeout-minutes: 5
     steps:
       - name: Install test dependencies
@@ -40,6 +42,7 @@ jobs:
 
   lint:
     runs-on: [self-hosted, linux]
+    container: ubuntu:latest
     timeout-minutes: 3
     steps:
       - name: Install linter
@@ -55,6 +58,7 @@ jobs:
 
   deploy:
     runs-on: [self-hosted, linux]
+    container: ubuntu:latest
     timeout-minutes: 5
     steps:
       - name: Checkout repository
