--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,29 +64,29 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install Docker and SSH tools
+           - name: Install Docker and SSH tools
         run: |
-          sudo apt update
-          sudo apt install -y \
+          apt update
+          apt install -y \
             ca-certificates \
             curl \
             gnupg \
             lsb-release \
             openssh-client
 
-          sudo mkdir -p /etc/apt/keyrings
+          mkdir -p /etc/apt/keyrings
           curl -fsSL https://download.docker.com/linux/debian/gpg | \
-            sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+            gpg --dearmor -o /etc/apt/keyrings/docker.gpg
 
           echo \
             "deb [arch=$(dpkg --print-architecture) \
             signed-by=/etc/apt/keyrings/docker.gpg] \
             https://download.docker.com/linux/debian \
             $(lsb_release -cs) stable" | \
-            sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+            tee /etc/apt/sources.list.d/docker.list > /dev/null
 
-          sudo apt update
-          sudo apt install -y docker-ce docker-ce-cli containerd docker-buildx-plugin
+          apt update
+          apt install -y docker-ce docker-ce-cli containerd docker-buildx-plugin
 
       - name: Set up SSH key
         run: |
